src/styles.css
*,
:root {
  --dark: #12121f;
  --dark-gray: #303133;
  --light: #f7f8fc;
  --accent: #380082;
  --modal: #3949ab;
  --sections: #1f85b4;
  --text: #f5f5f5;
}

::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--dark-gray);
  color: var(--white);
}

h1,
h2,
h3 {
  padding: 10px;
  margin: 10px;
}

/* .container {
  width: 90vw;
  margin: 5rem auto;
  background: var(--light);
  border-radius: 0.25rem;
  padding: 2.5rem 2rem;
  max-width: 920px;
  display: grid;
  gap: 1rem 2rem;
} */

.btn-container {
  height: 100%;
  width: 100vw;
  display: flex;
  justify-content: center;
}

.btn {
  background: transparent;
  border-color: transparent;
  width: 14rem;
  height: 4.5rem;
  min-width: 6rem;
  min-height: 2rem;
  background: var(--sections);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  border-radius: 10px;
  color: var(--text);
  cursor: pointer;
  align-self: center;
  box-shadow: 0px 4px 4px rgba(59, 75, 119, 0.45);
  text-shadow: 0px 4px 4px rgba(110, 147, 221, 0.45);
  outline-style: none;
  text-align: center;
  margin: 8% 0;
  font-size: 1.5rem;
}

.home-header {
  font-family: "Montserrat", sans-serif;
  font-size: 3.2rem;
  color: var(--text);
  text-align: center;
  padding-top: 15rem;
  text-shadow: 0px 4px 4px rgba(122, 123, 126, 0.45);
}

.container {
  position: relative;
  overflow: hidden;
  height: 100vh;
}


.content {
  position: absolute;
  top: 0;
  color: #f1f1f1;
  background-color: rgba(0, 0, 0, 0.7);
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
}

.sub-content {
  text-align: center;
  padding: 10px;
}

.bg-video {
  width: 100%;
  height: 100vh;
}

.customer-details {
  padding: 1rem 1.5rem;
  border: 2px solid rgb(173, 173, 173);
  margin-bottom: 1rem;
  border-radius: 0.25rem;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.45);
}
.customer-details h4 {
  text-transform: none;
  line-height: 1.5;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.45);
}

.customer-details p:first-child:before {
  content: " ";
  display: block;
  border-bottom: 1px solid black;
  width: 25%;
}

.customer-details p {
  color: var(--dark-gray);
  margin-bottom: 0;
  margin-top: 0.5rem;
  font-weight: bold;
}

.customer-details header {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.customer-details header h4 {
  margin-bottom: 0;
}

.key {
  color: var(--accent);
  text-shadow: 0px 4px 4px rgba(79, 6, 88, 0.45);
}

.ac-btn {
  background: transparent;
  border-color: transparent;
  width: 2rem;
  height: 2rem;
  background: var(--sections);
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  color: var(--text);
  cursor: pointer;
  margin-left: 1rem;
  align-self: center;
  min-width: 2rem;
  box-shadow: 0px 4px 4px rgba(59, 75, 119, 0.45);
  outline-style: none;
}

